infrastructure/staging/controllers/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istari-gateway
  namespace: cilium
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard.istari.benjaminmnoer.dk-tls
    allowedRoutes:
      namespaces:
        from: All
